--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-"TELEGRAM_BOT_TOKEN": "6197218385:AAGJs_GGYcE0JhmP4BEKKyZnm6NUeZwgEZU"
-"RPC_URL": "https://arb-mainnet.g.alchemy.com/v2/-4-rxeMBTi-yavAgPLLK5TkFBvri4Pvr"
-"CONTRACT_ADDRESS": "0x7F6228DdA3F9ea6B4beAa24181bf95B2F4a29dB8"
+TELEGRAM_BOT_TOKEN=6197218385:AAGJs_GGYcE0JhmP4BEKKyZnm6NUeZwgEZU
+RPC_URL=https://arb-mainnet.g.alchemy.com/v2/-4-rxeMBTi-yavAgPLLK5TkFBvri4Pvr
+CONTRACT_ADDRESS=0x7F6228DdA3F9ea6B4beAa24181bf95B2F4a29dB8
